--- a/auth/.env
+++ b/auth/.env
@@ -2,4 +2,4 @@ PORT=3001
 MONGODB_URI=mongodb://localhost:27017/auth_db
 SESSION_SECRET=dev-session-secret-change-in-production-123456789
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173,http://localhost:3000
