--- a/payment/.env
+++ b/payment/.env
@@ -3,4 +3,4 @@ MONGODB_URI=mongodb://localhost:27017/payment_db
 AUTH_SERVICE_URL=http://localhost:3001
 TICKET_SERVICE_URL=http://localhost:3003
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173,http://localhost:3000
