--- a/event/.env
+++ b/event/.env
@@ -2,4 +2,4 @@ PORT=3002
 MONGODB_URI=mongodb://localhost:27017/event_db
 AUTH_SERVICE_URL=http://localhost:3001
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173,http://localhost:3000
