--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "flex-template",
+  "name": "ticketer",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:frontend dev:backend",
-    "dev:frontend": "vite --open",
-    "dev:backend": "convex dev",
+    "dev": "vite --open",
     "build": "vite build",
-    "lint": "tsc -p convex -noEmit --pretty false && tsc -p . -noEmit --pretty false && convex dev --once && vite build"
+    "preview": "vite preview",
+    "lint": "tsc -p . -noEmit --pretty false"
   },
   "dependencies": {
-    "@convex-dev/auth": "^0.0.80",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
-    "convex": "^1.24.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0"
   },
@@ -31,7 +30,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "npm-run-all": "^4.1.5",
     "postcss": "~8",
     "prettier": "^3.5.3",
     "tailwindcss": "~3",
