--- a/ticket/.env
+++ b/ticket/.env
@@ -3,4 +3,4 @@ MONGODB_URI=mongodb://localhost:27017/ticket_db
 AUTH_SERVICE_URL=http://localhost:3001
 EVENT_SERVICE_URL=http://localhost:3002
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173,http://localhost:3000
