--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,89 +1,90 @@
-name: CI - Build and Test
+name: CI/CD - Build and Push Images
 
 on:
-    push:
-        branches: [main, develop]
-    pull_request:
-        branches: [main, develop]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_PREFIX: ${{ github.repository_owner }}/ticketer
 
 jobs:
-    lint-and-test-frontend:
-        name: Lint and Test Frontend
-        runs-on: ubuntu-latest
+  build-and-push:
+    name: Build and Push Images
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    strategy:
+      matrix:
+        include:
+          - service: auth
+            context: ./auth
+            dockerfile: ./auth/Dockerfile
+          - service: event
+            context: ./event
+            dockerfile: ./event/Dockerfile
+          - service: ticket
+            context: ./ticket
+            dockerfile: ./ticket/Dockerfile
+          - service: payment
+            context: ./payment
+            dockerfile: ./payment/Dockerfile
+          - service: frontend
+            context: .
+            dockerfile: ./Dockerfile
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "18"
-                  cache: "npm"
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Install dependencies
-              run: npm ci
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-            - name: Run linter
-              run: npm run lint || true
+      - name: Log in to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Build frontend
-              run: npm run build
+      - name: Build and push ${{ matrix.service }}
+        uses: docker/build-push-action@v5
+        with:
+          context: ${{ matrix.context }}
+          file: ${{ matrix.dockerfile }}
+          platforms: linux/amd64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-${{ matrix.service }}:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-            - name: Upload build artifacts
-              uses: actions/upload-artifact@v4
-              with:
-                  name: frontend-dist
-                  path: dist/
-                  retention-days: 7
+  summary:
+    name: Build Summary
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: always()
 
-    test-services:
-        name: Test Microservices
-        runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                service: [auth, event, ticket, payment]
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "18"
-
-            - name: Install dependencies
-              working-directory: ./${{ matrix.service }}
-              run: npm ci
-
-            - name: Run tests
-              working-directory: ./${{ matrix.service }}
-              run: npm test || echo "No tests configured"
-
-    build-docker-images:
-        name: Build Docker Images
-        runs-on: ubuntu-latest
-        needs: [lint-and-test-frontend, test-services]
-
-        strategy:
-            matrix:
-                service: [auth, event, ticket, payment, frontend]
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            - name: Build ${{ matrix.service }} image
-              uses: docker/build-push-action@v5
-              with:
-                  context: ${{ matrix.service == 'frontend' && '.' || matrix.service }}
-                  file: ${{ matrix.service == 'frontend' && './Dockerfile.frontend' || format('./{0}/Dockerfile', matrix.service) }}
-                  push: false
-                  tags: ticketer-${{ matrix.service }}:test
-                  cache-from: type=gha
-                  cache-to: type=gha,mode=max
+    steps:
+      - name: Build Status
+        run: |
+          if [ "${{ needs.build-and-push.result }}" == "success" ]; then
+            echo "✅ All images built successfully!"
+            if [ "${{ github.event_name }}" != "pull_request" ]; then
+              echo "📦 Images pushed to ghcr.io/${{ github.repository_owner }}/ticketer-*"
+              echo ""
+              echo "To deploy manually, run:"
+              echo "  cd terraform && terraform apply"
+              echo "  cd .. && ./scripts/deploy.sh"
+            fi
+          else
+            echo "❌ Build failed"
+            exit 1
+          fi
